# AI-Lung-PETCT-Lung-Body-Composition-Survival

./: README.md  USER_GUIDE.md  app.py  bootstrap_windows.py  one_click_start_petct_bodycomp_windows.bat  pyproject.toml  requirements.txt  start_petct_bodycomp_windows.bat
petct_bodycomp/: __init__.py  feature_extraction.py  gui.py  risk_model_spec.json  risk_prediction.py  segmentation.py
sample_data/: README.md
